// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches forest theme snapshot 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="[TR] common.save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(34, 197, 94, 1)",
        "borderBottomColor": "rgba(0, 0, 0, 0)",
        "borderBottomLeftRadius": 9,
        "borderBottomRightRadius": 9,
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(0, 0, 0, 0)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(0, 0, 0, 0)",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "rgba(0, 0, 0, 0)",
        "borderTopLeftRadius": 9,
        "borderTopRightRadius": 9,
        "borderTopWidth": 0,
        "cursor": "pointer",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 16,
        "paddingRight": 16,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#14281A",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.1,
            "lineHeight": 18,
          }
        }
        suppressHighlighting={true}
      >
        [TR] common.save
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button matches midnight theme snapshot 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="[TR] common.save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(139, 92, 246, 1)",
        "borderBottomColor": "rgba(0, 0, 0, 0)",
        "borderBottomLeftRadius": 9,
        "borderBottomRightRadius": 9,
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(0, 0, 0, 0)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(0, 0, 0, 0)",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "rgba(0, 0, 0, 0)",
        "borderTopLeftRadius": 9,
        "borderTopRightRadius": 9,
        "borderTopWidth": 0,
        "cursor": "pointer",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 16,
        "paddingRight": 16,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#09090B",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.1,
            "lineHeight": 18,
          }
        }
        suppressHighlighting={true}
      >
        [TR] common.save
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button matches sunrise theme snapshot 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <View
    accessibilityLabel="[TR] common.save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(245, 158, 11, 1)",
        "borderBottomColor": "rgba(0, 0, 0, 0)",
        "borderBottomLeftRadius": 9,
        "borderBottomRightRadius": 9,
        "borderBottomWidth": 0,
        "borderLeftColor": "rgba(0, 0, 0, 0)",
        "borderLeftWidth": 0,
        "borderRightColor": "rgba(0, 0, 0, 0)",
        "borderRightWidth": 0,
        "borderStyle": "solid",
        "borderTopColor": "rgba(0, 0, 0, 0)",
        "borderTopLeftRadius": 9,
        "borderTopRightRadius": 9,
        "borderTopWidth": 0,
        "cursor": "pointer",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 16,
        "paddingRight": 16,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#271F15",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.1,
            "lineHeight": 18,
          }
        }
        suppressHighlighting={true}
      >
        [TR] common.save
      </Text>
    </View>
  </View>
</View>
`;
